--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body a{
 	-o-transition: 0.5s all;
 	-moz-transition: 0.5s all;
 	-ms-transition: 0.5s all;
+	color: #fff;
 }
  ul{
 	padding: 0;
@@ -233,9 +234,9 @@ a.item_add {
 /*--banner--*/
 .banner{
 	width: 100%;
-    height: 400px;
+    height: 550px;
     display: block;
-    background: url(../images/banner.jpg)no-repeat center;
+    background: url(../images/banner_naamslinger.jpg)no-repeat center;
 	background-size: cover;
 	overflow:hidden;
 }
@@ -530,7 +531,7 @@ a.buy-now:hover{
 	margin-right:6px;
 }
 .mid-2 {
-    padding-top: 1em;
+    padding-top: 0.2em;
 }
 .mid-1 {
     padding-top: 1em;
@@ -561,7 +562,7 @@ a.buy-now:hover{
 	width: 50px;
     height: 50px;
     display: inline-block;
-    background: #f67777;
+    background: #369df9;
 	color:#fff;
 	font-size:1.3em;
     margin: 0 0.3em;
@@ -569,7 +570,7 @@ a.buy-now:hover{
 }
 .zoom-icon .glyphicon-menu-right{
     background:#fff;
-	color: #f67777;
+	color: #369df9;
 }
 .mid-pop .zoom-icon {
 	top: 0px;
@@ -714,7 +715,7 @@ a.cart:hover{
 h4.cate {
     font-family: 'Ubuntu-Regular';
     font-size: 1.7em;
-    color:#F67777;
+    color:#369df9;
 }
 
 ul.kid-menu{
@@ -2342,4 +2343,9 @@ td.add-check a {
     background-position-x: -225px;
     background-size: 542px;
 }
+}
+
+a:hover, a:focus {
+	color: #fff !important;
+	text-decoration: none !important;
 }
