--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,7 @@ a.buy-now:hover{
 }
  .mid-1 span{
 	font-size: 0.9em;
-    color: #F67777;
+    color: #f64ca6;
     line-height: 1.8em;
     font-family: 'Ubuntu-Bold';
 }
@@ -517,10 +517,10 @@ a.buy-now:hover{
 .mid-1 h6 a:hover {
     color: #F67777;
 }
-.mid-2 p{
+.mid-3 p{
 	float:left;
 	font-size:0.9em;
-	color:#B4B4B4;
+	color:#333;
 }
 .mid-2 p em{
 	font-style:normal;
@@ -592,9 +592,10 @@ a.buy-now:hover{
 .banner-top{
 	text-align:center;
 	width: 100%;
-    height: 250px;
+    height: 400px;
     display: block;
-    background: url(../images/back.jpg)no-repeat ;
+    background: url(../images/Verjaardagslingers.jpg)no-repeat ;
+	background-size:cover;
 	padding:5em 0;
 }
 .banner-top h1{
@@ -603,12 +604,12 @@ a.buy-now:hover{
 	font-family: 'Ubuntu-Regular';
 }
 .banner-top h2{
-	font-size:0.9em;
+	font-size:1.9em;
 	color:#fff;
 	margin-top:1em;
 }
 .banner-top h2 a{
-	color:#f67777;
+	color:#f753a9;
 }
 .banner-top h2 label{
 	margin:0 0.4em;
